--- a/html/packages/media/templates/image-item.html
+++ b/html/packages/media/templates/image-item.html
@@ -7,7 +7,7 @@
 			<div class="back-cover">{{#_sports_icon}}<img src="{{_sports_icon}}" class="sports-icon" />{{/_sports_icon}}</div>
 
 		{{/_thumbnail}}
-		<div class="action-section">
+		<div class="action-section mobile-hide">
 
 
 				<div class="action-block left-block vote vote-h {{#_has_voted}} link-disabled {{/_has_voted}}" subject-type-id="{{_enttypes_id}}" subject-id="{{_id}}">
@@ -29,7 +29,7 @@
 			{{/usl_game_link_id}}
 
 		</div>
-		<div class="detail-view {{#_detailclass}}{{_detailclass}}{{/_detailclass}}">
+		<div class="mobile-hide detail-view {{#_detailclass}}{{_detailclass}}{{/_detailclass}}">
 			{{#_label}}<h6>{{_label}}</h6>{{/_label}}
 			{{#_sublabel}}
 				{{#label}}
