--- a/html/css/bootstrap.css
+++ b/html/css/bootstrap.css
@@ -5188,7 +5188,7 @@ input[type="submit"].btn.btn-mini {
   width: 90%;
   background-color: #ffffff;
 
-  border: 15px solid #eaedf2;
+  border: 10px solid #fff;
   *border: 15px solid #eaedf2;
   -webkit-border-radius: 0;
      -moz-border-radius: 0;
@@ -5221,14 +5221,6 @@ input[type="submit"].btn.btn-mini {
   top: 10%;
 }
 
-.modal-header {
-  /*padding: 9px 15px;*/
-}
-
-.modal-header .close {
-    font-size: 4em;
-}
-
 .modal-header h3 {
   margin: 0;
   line-height: 30px;
@@ -5236,7 +5228,6 @@ input[type="submit"].btn.btn-mini {
 
 .modal-body {
   position: relative;
-  max-height: 80%;
   min-height: 80%;
   overflow-y: scroll;
     overflow-x: hidden;
