--- a/html/pages/home/templates/layout.html
+++ b/html/pages/home/templates/layout.html
@@ -18,7 +18,9 @@
 			<a href="javascript: void(0);" class="right-arrow-page home-page-arrow right-arrow-page-h">
 				<img src="http://cdn.athletez.com/resources/img/right_arrow.png">
 			</a>
+
 		</div>
 	</div>
+	<div data-uk-scrollspy="{cls:'uk-animation-fade'}" class="uk-width-1-2 uk-container-center"><div style="text-align: center;" class="uk-panel uk-panel-box">loading more...</div></div>
 	<div id="main-footer"></div>
 </div>
