--- a/html_build/css/bootstrap.css
+++ b/html_build/css/bootstrap.css
@@ -4333,7 +4333,7 @@ input[type="submit"].btn.btn-mini {
   z-index: 1050;
   width: 90%;
   background-color: #ffffff;
-  border: 15px solid #eaedf2;
+  border: 10px solid #fff;
   *border: 15px solid #eaedf2;
   -webkit-border-radius: 0;
      -moz-border-radius: 0;
@@ -4362,19 +4362,12 @@ input[type="submit"].btn.btn-mini {
 .modal.fade.in {
   top: 10%;
 }
-.modal-header {
-  
-}
-.modal-header .close {
-    font-size: 4em;
-}
 .modal-header h3 {
   margin: 0;
   line-height: 30px;
 }
 .modal-body {
   position: relative;
-  max-height: 80%;
   min-height: 80%;
   overflow-y: scroll;
     overflow-x: hidden;
