--- a/html_build/packages/common/templates/popup.html
+++ b/html_build/packages/common/templates/popup.html
@@ -1,8 +1,6 @@
 <div id="<%= popup.id %>" class="modal common-modal hide fade model-popup-h in">
 	<div class="modal-header">
-		<a href="javascript: void(0);" title="close" data-id="<%= popup.id %>" class="close">
-			&times;
-		</a>
+		<a href="javascript: void(0);" title="close" data-id="<%= popup.id %>" class="close uk-close uk-close-alt"></a>
 		<h3 class="modal-header-h">Header</h3>
 	</div>
 	<div class="modal-body page-content-h" id="modalBody"><%= popup.popup_content %></div>
