got auto-refresh working on scroll to bottom

--- a/html/pages/home/templates/layout.html
+++ b/html/pages/home/templates/layout.html
@@ -12,15 +12,8 @@
 		<div class="search-result-outer">
 
 			<div id="search-result" class="p-l-20 clear"></div>
-			<a href="javascript: void(0);" class="left-arrow-page home-page-arrow left-arrow-page-h">
-				<img src="http://cdn.athletez.com/resources/img/left_arrow.png">
-			</a>
-			<a href="javascript: void(0);" class="right-arrow-page home-page-arrow right-arrow-page-h">
-				<img src="http://cdn.athletez.com/resources/img/right_arrow.png">
-			</a>
-
 		</div>
 	</div>
-	<div data-uk-scrollspy="{cls:'uk-animation-fade'}" class="uk-width-1-2 uk-container-center"><div style="text-align: center;" class="uk-panel uk-panel-box">loading more...</div></div>
+	<div data-uk-scrollspy="{cls:'uk-animation-fade', repeat: true}" class="uk-width-1-2 uk-container-center"><div style="text-align: center;" class="uk-panel uk-panel-box">loading more...</div></div>
 	<div id="main-footer"></div>
 </div>
