--- a/html_build/pages/home/templates/layout.html
+++ b/html_build/pages/home/templates/layout.html
@@ -14,6 +14,8 @@
 			<div id="search-result" class="p-l-20 clear"></div>
 		</div>
 	</div>
-	<div data-uk-scrollspy="{cls:'uk-animation-fade', repeat: true}" class="uk-width-1-2 uk-container-center"><div style="text-align: center;" class="uk-panel uk-panel-box">loading more...</div></div>
+	<div data-uk-scrollspy="{cls:'uk-animation-fade', repeat: true}" class="uk-width-1-2 uk-container-center" id="homepage-infinite-scroll">
+		<!--<div style="text-align: center;" class="uk-panel uk-panel-box">loading more...</div>-->
+	</div>
 	<div id="main-footer"></div>
 </div>
