--- a/html/css/app.css
+++ b/html/css/app.css
@@ -2731,7 +2731,7 @@ li.sport .teamlist-header, .stat-val-outer {
 	 }*/
 
 	/* FANS CSS AREA  */
-
+/*
 	#fans-div div.image-item-container {
 		width: 100%;
 		height: 140px;
@@ -2759,7 +2759,7 @@ li.sport .teamlist-header, .stat-val-outer {
 		height: 74px;
 		margin: -132px 30px 30px 30px;
 	}
-
+*/
 	.add-to-list {
 		background-position: 0 0;
 		margin-left: 5px;
@@ -3508,7 +3508,7 @@ li.sport .teamlist-header, .stat-val-outer {
 	#participants_div ul.image-list {
 		margin: 5px 0 10px 5px;
 	}
-	
+/*
 	#participants_div ul li.image {
 		min-height: 150px;
 		padding: 0;
@@ -3524,7 +3524,7 @@ li.sport .teamlist-header, .stat-val-outer {
 		min-width: 100%;
 		min-height: 150px;
 	}
-	
+*/
 	#participants_div {
 		display: none;
 	}
