--- a/html/pages/profilesetting/templates/club.html
+++ b/html/pages/profilesetting/templates/club.html
@@ -15,7 +15,7 @@
 <div>
 	<span class="span2">Club Name</span>
 	<input type="text" id="txt-club-club" placeholder="Just Start Typing" disabled="disabled"/>
-	<a class="add-club-h" href="javascript: void(0);">Couldn't Find your Club?</a>
+	<a class="add-club-h uk-button" href="javascript: void(0);">Couldn't Find your Club?</a>
 	<p class="field-error"></p>
 	<p class="field-message"></p>
 </div>
