--- a/cordova/platforms/ios/www/usercontrols/dropdown/template/layout.html
+++ b/cordova/platforms/ios/www/usercontrols/dropdown/template/layout.html
@@ -1,4 +1,4 @@
-<div class="dropdown-container">
+<div test="test" class="dropdown-container">
 	<input type="hidden" class="hidden-input-dropdown-h" value="" />
 	<div class="drop-down-outer">
 		<div class="region-dark dropdown-header-box">
