work on detail view and image crop user / pic upload

--- a/html/packages/common/templates/popup.html
+++ b/html/packages/common/templates/popup.html
@@ -3,5 +3,5 @@
 		<a href="javascript: void(0);" title="close" data-id="<%= popup.id %>" class="close uk-close uk-close-alt"></a>
 		<h3 class="modal-header-h">Header</h3>
 	</div>
-	<div class="modal-body page-content-h" id="modalBody"><%= popup.popup_content %></div>
+	<div class="modal-body page-content-h" style="overflow:auto;-webkit-overflow-scrolling:touch" id="modalBody"><%= popup.popup_content %></div>
 </div>
