--- a/html/pages/login/templates/logintemplate.html
+++ b/html/pages/login/templates/logintemplate.html
@@ -17,7 +17,7 @@
 					<div id="firstregbase">
 						<!--<div class="loginbase">
 							<!--<label for="username">Email</label>-->
-							<input type="text" name="username" placeholder="Email Address" />
+							<input type="email" name="username" placeholder="Email Address" />
 							<!--<label for="password">Password</label>-->
 							<input type="password" name="password" placeholder="Password" />
 							<div class="loguser">
