--- a/html/packages/media/templates/image-item-detail.html
+++ b/html/packages/media/templates/image-item-detail.html
@@ -12,9 +12,24 @@
 				<% } %>
 				<h4 class="uk-panel-title">
 					<i class="<%= ukicon %>"></i>
-					<a href="<%= _link %>"><%= _label %></a>
+					<% if(_enttypes_id==5){ %>
+						<a href="<%= _link %>"><%= _noicon_text %> </a><br/>
+						<a href="<%= _link %>" class="uk-text-small"><%= _label %></a>
+					<% } else { %>
+						<a href="<%= _link %>"><%= _label %></a>
+					<% } %>
 				</h4><span></span>
-			</div>
+			</div><%
+			try{
+			if(_address){ %>
+			<div class="uk-grid">
+				<div class="uk-width-1-3">
+					<img src="http://maps.googleapis.com/maps/api/staticmap?size=100x100&zoom=11&center=<%= _address %>&markers=<%= _address %>"/>
+				</div>
+				<div class="uk-width-2-3"><%= _address %></div>
+			</div><%
+			}
+			} catch(e){}%>
 		</div>
 	</div>
 </li>
