hopefully fixes sport menu problem on the home page

--- a/html/pages/home/home.css
+++ b/html/pages/home/home.css
@@ -225,3 +225,11 @@ li.sport a:hover {
 }
 
 
+@media only screen and (min-width: 320px) and (max-width: 769px) {
+    .menu-detail-h.sports-option-h{
+        max-height: 200px;
+        max-width: 250px;
+        overflow: scroll;
+        -webkit-overflow-scrolling: touch;
+    }
+}
